--- a/Part2/Part2.ipynb
+++ b/Part2/Part2.ipynb
@@ -252,27 +252,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Text      Labels  CountY->X  CountY\n",
-      "0        !   I-neutral          1    3507\n",
-      "1        #   I-neutral         19    3507\n",
-      "2        %   I-neutral          3    3507\n",
-      "3        &   I-neutral          2    3507\n",
-      "4        '   I-neutral          3    3507\n",
-      "...    ...         ...        ...     ...\n",
-      "19862   闺蜜  I-negative          1     135\n",
-      "19863   青山  I-negative          1     135\n",
-      "19864   高危  I-negative          1     135\n",
-      "19865   高手  I-negative          1     135\n",
-      "19866    鸡  I-negative          2     135\n",
+      "                         Text      Labels  CountY->X  CountY\n",
+      "0                           !   B-neutral          1   24868\n",
+      "1                           \"   B-neutral          4   24868\n",
+      "2                     #04-213   B-neutral          1   24868\n",
+      "3      #2017TaipeiUniversiade   B-neutral          1   24868\n",
+      "4                         #3D   B-neutral          1   24868\n",
+      "...                       ...         ...        ...     ...\n",
+      "50429                   youuu  B-negative          1    1139\n",
+      "50430                zenyatta  B-negative          2    1139\n",
+      "50431                   zhong  B-negative          1    1139\n",
+      "50432                    zouk  B-negative          1    1139\n",
+      "50433                   zubat  B-negative          1    1139\n",
       "\n",
-      "[19867 rows x 4 columns]\n",
-      "Running at I-neutral\n",
-      "Running at O\n",
-      "Running at B-negative\n",
+      "[50434 rows x 4 columns]\n",
       "Running at B-neutral\n",
-      "Running at B-positive\n",
+      "Running at I-neutral\n",
       "Running at I-positive\n",
-      "Running at I-negative\n"
+      "Running at O\n",
+      "Running at B-positive\n",
+      "Running at I-negative\n",
+      "Running at B-negative\n"
      ]
     }
    ],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,27 +314,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Text   max_label  Paragraph\n",
-      "0         十年           O          0\n",
-      "1          前  I-positive          0\n",
-      "2         马云  B-positive          0\n",
-      "3         告诉           O          0\n",
-      "4          你  B-negative          0\n",
-      "...      ...         ...        ...\n",
-      "13065      、           O        343\n",
-      "13066  #UNK#  I-negative        343\n",
-      "13067    180           O        343\n",
-      "13068     公里   I-neutral        343\n",
-      "13069      。           O        343\n",
+      "             Text   max_label  Paragraph\n",
+      "0      Everything           O          0\n",
+      "1          sounds           O          0\n",
+      "2          better           O          0\n",
+      "3            with           O          0\n",
+      "4             the           O          0\n",
+      "...           ...         ...        ...\n",
+      "34186           @           O       2649\n",
+      "34187      Butter  B-positive       2649\n",
+      "34188          My           O       2649\n",
+      "34189       #UNK#  I-negative       2649\n",
+      "34190       #UNK#  I-negative       2649\n",
       "\n",
-      "[13070 rows x 3 columns]\n"
+      "[34191 rows x 3 columns]\n"
      ]
     }
    ],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,11 +381,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('CNdev.prediction','w') as f:\n",
+    "with open('dev.prediction','w') as f:\n",
     "    for item in output_list:\n",
     "        for i in item:\n",
     "            f.write(\"%s\\n\" % i)"
