--- a/Part2/Part2.ipynb
+++ b/Part2/Part2.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TF_train_pathing = \"/Users/tengfone/Downloads/train\"\n",
-    "TF_test_pathing = \"/Users/tengfone/Downloads/dev.in\""
+    "TF_train_pathing = \"/Users/tengfone/Desktop/ML_Project/data/CN/train\"\n",
+    "TF_test_pathing = \"/Users/tengfone/Desktop/ML_Project/data/CN/dev.in\""
    ]
   },
   {
@@ -252,27 +252,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                         Text      Labels  CountY->X  CountY\n",
-      "0                           !   B-neutral          1   24868\n",
-      "1                           \"   B-neutral          4   24868\n",
-      "2                     #04-213   B-neutral          1   24868\n",
-      "3      #2017TaipeiUniversiade   B-neutral          1   24868\n",
-      "4                         #3D   B-neutral          1   24868\n",
-      "...                       ...         ...        ...     ...\n",
-      "50429                   youuu  B-negative          1    1139\n",
-      "50430                zenyatta  B-negative          2    1139\n",
-      "50431                   zhong  B-negative          1    1139\n",
-      "50432                    zouk  B-negative          1    1139\n",
-      "50433                   zubat  B-negative          1    1139\n",
+      "      Text      Labels  CountY->X  CountY\n",
+      "0        !   I-neutral          1    3507\n",
+      "1        #   I-neutral         19    3507\n",
+      "2        %   I-neutral          3    3507\n",
+      "3        &   I-neutral          2    3507\n",
+      "4        '   I-neutral          3    3507\n",
+      "...    ...         ...        ...     ...\n",
+      "19862   闺蜜  I-negative          1     135\n",
+      "19863   青山  I-negative          1     135\n",
+      "19864   高危  I-negative          1     135\n",
+      "19865   高手  I-negative          1     135\n",
+      "19866    鸡  I-negative          2     135\n",
       "\n",
-      "[50434 rows x 4 columns]\n",
-      "Running at B-neutral\n",
+      "[19867 rows x 4 columns]\n",
       "Running at I-neutral\n",
-      "Running at I-positive\n",
       "Running at O\n",
+      "Running at B-negative\n",
+      "Running at B-neutral\n",
       "Running at B-positive\n",
-      "Running at I-negative\n",
-      "Running at B-negative\n"
+      "Running at I-positive\n",
+      "Running at I-negative\n"
      ]
     }
    ],
@@ -291,6 +291,220 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Text</th>\n",
+       "      <th>Paragraph</th>\n",
+       "      <th>I-neutral</th>\n",
+       "      <th>O</th>\n",
+       "      <th>B-negative</th>\n",
+       "      <th>B-neutral</th>\n",
+       "      <th>B-positive</th>\n",
+       "      <th>I-positive</th>\n",
+       "      <th>I-negative</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>十年</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000114</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>前</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000285</td>\n",
+       "      <td>0.000318</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000723</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>马云</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000618</td>\n",
+       "      <td>0.001624</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>告诉</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000216</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>你</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.002851</td>\n",
+       "      <td>0.009045</td>\n",
+       "      <td>0.018083</td>\n",
+       "      <td>0.006484</td>\n",
+       "      <td>0.004060</td>\n",
+       "      <td>0.001447</td>\n",
+       "      <td>0.00738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13065</th>\n",
+       "      <td>、</td>\n",
+       "      <td>343</td>\n",
+       "      <td>0.001996</td>\n",
+       "      <td>0.007267</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13066</th>\n",
+       "      <td>#UNK#</td>\n",
+       "      <td>343</td>\n",
+       "      <td>0.000143</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>0.001808</td>\n",
+       "      <td>0.000154</td>\n",
+       "      <td>0.000406</td>\n",
+       "      <td>0.000362</td>\n",
+       "      <td>0.00369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13067</th>\n",
+       "      <td>180</td>\n",
+       "      <td>343</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000038</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13068</th>\n",
+       "      <td>公里</td>\n",
+       "      <td>343</td>\n",
+       "      <td>0.000285</td>\n",
+       "      <td>0.000267</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13069</th>\n",
+       "      <td>。</td>\n",
+       "      <td>343</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.023642</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13070 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Text  Paragraph  I-neutral         O  B-negative  B-neutral  \\\n",
+       "0         十年          0   0.000000  0.000114    0.000000   0.000000   \n",
+       "1          前          0   0.000285  0.000318    0.000000   0.000000   \n",
+       "2         马云          0   0.000000  0.000000    0.000000   0.000618   \n",
+       "3         告诉          0   0.000000  0.000216    0.000000   0.000000   \n",
+       "4          你          0   0.002851  0.009045    0.018083   0.006484   \n",
+       "...      ...        ...        ...       ...         ...        ...   \n",
+       "13065      、        343   0.001996  0.007267    0.000000   0.000000   \n",
+       "13066  #UNK#        343   0.000143  0.000006    0.001808   0.000154   \n",
+       "13067    180        343   0.000000  0.000038    0.000000   0.000000   \n",
+       "13068     公里        343   0.000285  0.000267    0.000000   0.000000   \n",
+       "13069      。        343   0.000000  0.023642    0.000000   0.000000   \n",
+       "\n",
+       "       B-positive  I-positive  I-negative  \n",
+       "0        0.000000    0.000000     0.00000  \n",
+       "1        0.000000    0.000723     0.00000  \n",
+       "2        0.001624    0.000000     0.00000  \n",
+       "3        0.000000    0.000000     0.00000  \n",
+       "4        0.004060    0.001447     0.00738  \n",
+       "...           ...         ...         ...  \n",
+       "13065    0.000000    0.000000     0.00000  \n",
+       "13066    0.000406    0.000362     0.00369  \n",
+       "13067    0.000000    0.000000     0.00000  \n",
+       "13068    0.000000    0.000000     0.00000  \n",
+       "13069    0.000000    0.000000     0.00000  \n",
+       "\n",
+       "[13070 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emitted_fix"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,27 +528,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             Text   max_label  Paragraph\n",
-      "0      Everything           O          0\n",
-      "1          sounds           O          0\n",
-      "2          better           O          0\n",
-      "3            with           O          0\n",
-      "4             the           O          0\n",
-      "...           ...         ...        ...\n",
-      "34186           @           O       2649\n",
-      "34187      Butter  B-positive       2649\n",
-      "34188          My           O       2649\n",
-      "34189       #UNK#  I-negative       2649\n",
-      "34190       #UNK#  I-negative       2649\n",
+      "        Text   max_label  Paragraph\n",
+      "0         十年           O          0\n",
+      "1          前  I-positive          0\n",
+      "2         马云  B-positive          0\n",
+      "3         告诉           O          0\n",
+      "4          你  B-negative          0\n",
+      "...      ...         ...        ...\n",
+      "13065      、           O        343\n",
+      "13066  #UNK#  I-negative        343\n",
+      "13067    180           O        343\n",
+      "13068     公里   I-neutral        343\n",
+      "13069      。           O        343\n",
       "\n",
-      "[34191 rows x 3 columns]\n"
+      "[13070 rows x 3 columns]\n"
      ]
     }
    ],
@@ -351,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
