--- a/Part4/Part4.ipynb
+++ b/Part4/Part4.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import libaries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,6 +17,13 @@
     "from collections import Counter, OrderedDict\n",
     "import collections\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read File"
    ]
   },
   {
@@ -43,6 +57,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate Transition Table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -63,6 +84,13 @@
     "                tra_arr[cur_psn][next_psn-1] += 1/final_dict[i[1]]\n",
     "    return tra_arr\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preprocessing"
    ]
   },
   {
@@ -89,6 +117,13 @@
     "    em = em.astype('float64')\n",
     "    header_list = header_list[1:]\n",
     "    return em, header_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get label index"
    ]
   },
   {
@@ -121,6 +156,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get Label Dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -134,6 +176,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get Transition Array"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -143,6 +192,13 @@
     "    tra_arr = np.zeros((len(final_dict),len(final_dict)))\n",
     "    tra_arr = transition_table(text, tra_arr)\n",
     "    return tra_arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vertibi Algo"
    ]
   },
   {
@@ -260,6 +316,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get output (Change file output name here)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -288,14 +351,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change File Path Here \n",
     "pre_filepath = '/Users/nicole/Desktop/CN/CN.csv'\n",
     "devin_filepath = '/Users/nicole/Desktop/CN/dev.in'\n",
     "train_filepath = '/Users/nicole/Desktop/CN/train'\n",
+    "\n",
     "text, label, label_split = readFile(train_filepath)\n",
     "final_dict = get_label_dict(text, label)\n",
     "tra_arr = get_tra_array(final_dict)\n",
-    "em, header_list = preprocess(pre_filepath, 'CN') #CSV\n",
+    "em, header_list = preprocess(pre_filepath, 'CN') # Indicate if it is EN/CN/SG\n",
     "index, output_label = get_label_index(devin_filepath, header_list) #dev in\n",
+    "\n",
+    "\n",
+    "# Change output file name in get_output function\n",
     "print(get_output(tra_arr, em, final_dict, index, output_label))"
    ]
   },
@@ -323,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
