--- a/Part3/Part3.ipynb
+++ b/Part3/Part3.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tengfone/.pyenv/versions/3.8.5/lib/python3.8/site-packages/pandas/compat/__init__.py:120: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from collections import Counter, OrderedDict\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess(filepath, lan):\n",
     "    \n",
     "    em_arr = pd.read_csv(filepath, sep=',',header=None)\n",
-    "#     em_arr = em_arr.T\n",
+    "    em_arr = em_arr.T\n",
     "    em_arr = em_arr.drop([0, 2])\n",
     "    em_arr.columns = em_arr.iloc[0]\n",
     "    em_arr = em_arr[1:]\n",
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -224,16 +233,27 @@
     }
    ],
    "source": [
-    "pre_filepath = '/Users/geraldlim/Desktop/CN/CN.csv'\n",
-    "devin_filepath = '/Users/geraldlim/Desktop/CN/dev.in'\n",
-    "train_filepath = '/Users/geraldlim/Desktop/CN/train'\n",
+    "# Change File Path Here \n",
+    "pre_filepath = '/Users/tengfone/Desktop/ML_Project/Part3/EN.csv'\n",
+    "devin_filepath = '/Users/tengfone/Desktop/ML_Project/data/EN(2)/dev.in'\n",
+    "train_filepath = '/Users/tengfone/Desktop/ML_Project/data/EN(2)/train'\n",
+    "\n",
     "text, label = readFile(train_filepath)\n",
     "final_dict = get_label_dict(text, label)\n",
     "tra_arr = get_tra_array(final_dict)\n",
-    "em, header_list = preprocess(pre_filepath, 'CN') #CSV\n",
+    "em, header_list = preprocess(pre_filepath, 'EN') # Indicate if it is EN/CN/SG\n",
+    "\n",
+    "\n",
     "index, output_label = get_label_index(devin_filepath, header_list) #dev in\n",
     "print(get_output(tra_arr, em, final_dict, index, output_label))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -252,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
