--- a/Part5/Part5.ipynb
+++ b/Part5/Part5.ipynb
@@ -1,10 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Part 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import Libaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tengfone/.pyenv/versions/3.8.5/lib/python3.8/site-packages/pandas/compat/__init__.py:120: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from collections import Counter, OrderedDict\n",
@@ -13,8 +36,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read File"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,15 +73,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pre Processing of the loaded CSV File from the Part5_Preprocess.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess(filepath, lan):\n",
     "    \n",
     "    em_arr = pd.read_csv(filepath, sep=',',header=None)\n",
-    "   # em_arr = em_arr.T\n",
+    "    em_arr = em_arr.T\n",
     "    em_arr = em_arr.drop([0, 2])\n",
     "    em_arr.columns = em_arr.iloc[0]\n",
     "    em_arr = em_arr[1:]\n",
@@ -69,8 +106,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting Each Label Index"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +142,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert Label to dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,8 +163,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting Transmission Array"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,8 +212,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output File (Change output file name here)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +233,8 @@
     "            temp_arr.append(\"{} {}\".format(label[ci][cj],j))\n",
     "        seq.append(temp_arr)\n",
     "\n",
-    "    with open ('dev.p3.out', 'w') as f: \n",
+    "    # Change output file name\n",
+    "    with open ('test.p5.out', 'w') as f: \n",
     "        for i in seq: \n",
     "            for j in i: \n",
     "                f.write(j+\"\\n\")\n",
@@ -177,8 +243,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2nd Order HMM Algo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +261,7 @@
     "    pi_arr = []\n",
     "    dy_arr = []\n",
     "    maxidx_arr = []\n",
+    "    \n",
     "    for ci, c in enumerate (n):\n",
     "        if ci == 0:\n",
     "            for i in range(len(em_arr)):\n",
@@ -226,27 +300,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
-    "pre_filepath = '/Users/nicole/Desktop/EN/EN.csv'\n",
-    "devin_filepath = '/Users/nicole/Desktop/EN/dev.in'\n",
-    "train_filepath = '/Users/nicole/Desktop/EN/train'\n",
+    "# Change File Path Here \n",
+    "pre_filepath = '/Users/tengfone/Desktop/ML_Project/Part5/TEST.csv'\n",
+    "devin_filepath = '/Users/tengfone/Desktop/ML_Project/data/test_data/test.in'\n",
+    "train_filepath = '/Users/tengfone/Desktop/ML_Project/data/EN(2)/train'\n",
+    "\n",
     "text, label, label_split = readFile(train_filepath)\n",
     "final_dict = get_label_dict(text, label)\n",
     "first_tra_arr, tra_arr = get_tra_arr(final_dict, label_split)\n",
-    "em, header_list = preprocess(pre_filepath, 'EN') #CSV\n",
-    "index, output_label = get_label_index(devin_filepath, header_list) #dev in\n",
+    "em, header_list = preprocess(pre_filepath, 'EN') # Indicate if it is EN/CN/SG\n",
+    "index, output_label = get_label_index(devin_filepath, header_list)\n",
+    "\n",
+    "# Change output file name in get_output function\n",
     "print(get_output(first_tra_arr, tra_arr, em, final_dict, index, output_label))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -265,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
